# useless_web_searcher

./: .gitignore  .travis.yml  CMakeLists.txt  Local.cmake  README.md
cmake/modules/: FindBoost.cmake
common/: CMakeLists.txt  common.cpp  common.hpp
common/common/: string_view.hpp
common/common/communication/: context.cpp  context.hpp
common/common/db/: url_db_interface.cpp  url_db_interface.hpp  url_db_request_keys.cpp  url_db_request_keys.hpp  url_db_requester.cpp  url_db_requester.hpp  url_id.hpp  url_state.hpp
common/common/fs/: file_creator.hpp  file_guard.hpp  file_loader.cpp  file_loader.hpp  scoped_file.hpp
common/common/index/: index_interface.cpp  index_interface.hpp  request_keys.cpp  request_keys.hpp
common/common/utils/: enable_private_creation.hpp
common/test/: CMakeLists.txt  common_test.cpp
engine/: CMakeLists.txt
engine/craw_frontier/: CMakeLists.txt  fake_crawl_frontier.py
engine/crawl_frontier/: doc.md  fake_crawl_frontier.py
engine/crawler/: CMakeLists.txt  crawler.py  doc.md
engine/index/: CMakeLists.txt  doc.md  index_request_handler.cpp  index_request_handler.hpp  main.cpp
engine/index_lib/: CMakeLists.txt
engine/index_lib/index/: index_file_path_builder.cpp  index_file_path_builder.hpp
engine/indexer/: CMakeLists.txt  doc.md
engine/parse_frontier/: CMakeLists.txt  README.md  file_to_parse_provider.cpp  file_to_parse_provider.hpp  main.cpp  request_message_handler.cpp  request_message_handler.hpp
engine/parser/: CMakeLists.txt  README.md  file_paths_to_parse_provider.cpp  file_paths_to_parse_provider.hpp  main.cpp  parser_client.cpp  parser_client.hpp
engine/parser/poller/: files_to_parse_poller.cpp  files_to_parse_poller.hpp
engine/parser_lib/: CMakeLists.txt  parser_lib.cpp
engine/parser_lib/tests/: CMakeLists.txt  parser_tests_main.cpp  url_filter_tests.cpp  urls_extractor_tests.cpp  utils.hpp
engine/url_db/: CMakeLists.txt  README.md  db_entry.cpp  db_entry.hpp  main.cpp  url_db.cpp  url_db.hpp  url_db_req_message_handler.cpp  url_db_req_message_handler.hpp
engine/url_db_lib/: CMakeLists.txt
searcher/: CMakeLists.txt  main.cpp
searcher/gui/useless_web_searcher/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  useless_web_searcher.pro
tests/: CMakeLists.txt
(+69 files in other folders)
